--- a/src/Components/LoginUser/LoginUser.module.css
+++ b/src/Components/LoginUser/LoginUser.module.css
@@ -1,9 +1,9 @@
-form {
+.form {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        border: solid;
+        border: 1px solid gray;
         padding: 10x;
         width: 50%;
         margin: 0 auto;
